# POLYPBASE

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
anomalies_par_type/: 00_resume_anomalies.csv  01_valeurs_releves_a_verifier.csv  02_temperatures_a_verifier.csv  03_codes_boite_et_especes_a_verifier.csv  04_code_espece_plusieurs_noms.csv  05_nom_scientifique_plusieurs_codes.csv  06_code_souche_plusieurs_especes.csv  07_code_boite_plusieurs_especes.csv
backend/: .env.example  requirements.txt
backend/config/: api_urls.py  settings.py  urls.py
config/: settings.py  urls.py
core/: admin.py  forms.py  models.py  urls.py  views.py
docs/: documentation_application_polypbase.md  guide_utilisateur.md  tests_backend.md  tracabilite_mcd.md  transferts_csv.md
docs/eda/: analyse_exploratoire_polypbase.ipynb
docs/mcd/: old_polypbase_mcd_complet.html  schema_bdd.md
docs/sondes/: notes_integration_iminilide.md  plan_integration_api.md
exports_polypbase/: boite.csv  espece.csv  range.csv  saisir_releve.csv  souche.csv  zone_thermique.csv
exports_polypbase/anomalies/: anomalies_bloquantes_toutes.csv  anomalies_boites_ambigues.csv  anomalies_boites_plusieurs_especes.csv  (+16 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
memoire/: Memoire_POLYPBASE.tex
notebooks/: excel_eda.ipynb  excel_to_polypbase_tables.ipynb  excel_to_polypbase_tables_anomalies_simple.ipynb  ml_ephyrae_prediction.ipynb  ml_ephyrae_simple.ipynb  requirements.txt
scripts/: compile_django_messages.py  generate_qr_codes.py  import_excel.py
(+127 files in other folders)
