[project]
name = "polypbase"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "django==5.2.13",
    "djangorestframework==3.16.1",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg[binary]==3.3.2",
    "python-dotenv==1.2.2",
    "qrcode>=8.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlparse==0.5.5",
    "tzdata==2026.2",
]
